# Linear-LLMs-Capstone

./: .gitignore  README.md  pyproject.toml
configs/: dataset_context_sweep_multikey_d20_n20_l512_2560.yaml  dataset_context_sweep_multikey_d20_n30_l512_2560.yaml  dataset_context_sweep_single_n20_l512_2560.yaml  dataset_context_sweep_single_n30_l512_2560.yaml  dataset_d20_paired.yaml  dataset_d20_smoke.yaml  dataset_hazy_d20_n10.yaml  dataset_hazy_d20_n30_l1024_2048.yaml  dataset_hazy_d5_n10.yaml  dataset_hazy_d5_n30_l1024_2048.yaml  dataset_hazy_single_n10.yaml  dataset_hazy_single_n30_l1024_2048.yaml  dataset_pilot_d20_n5.yaml  dataset_pilot_d5_n5.yaml  dataset_pilot_single_n5.yaml  dataset_ruler_multikey_d20_n30_l1024_2048.yaml  dataset_ruler_single_n30_l1024_2048.yaml  dataset_ruler_variable_tracking_d20_n30_l1024_2048.yaml  dataset_single.yaml  dataset_state_spaces_mamba_family_primary_n30_l2048_8192.yaml  dataset_state_spaces_probe_multikey_d20_n10_l2048_8192.yaml  dataset_state_spaces_probe_single_n10_l2048_8192.yaml  model_attn_1b_hazy.yaml  model_attn_360m_hazy.yaml  model_based_1b_hazy.yaml  model_based_1b_hazy_fp32.yaml  model_based_360m_hazy.yaml  model_based_360m_hazy_fp32.yaml  model_gated_deltanet.yaml  model_gated_deltanet_1_3b_linear_moe.yaml  model_gated_deltanet_1_3b_map_pure.yaml  model_gated_deltanet_340m_map_pure.yaml  model_mamba2_1_3b_official.yaml  model_mamba2_hf.yaml  model_mamba2_official.yaml  model_mamba_1b_hazy.yaml  model_mamba_360m_hazy.yaml  model_mock.yaml  model_state_spaces_mamba2_2_7b.yaml  model_state_spaces_mamba2attn_2_7b.yaml  (+2 more)
notes/: experiment_journal.md  report_part1_outline.md
report/: main.tex
requirements/: based-base.txt  based-kernels.txt  based-package.txt  (+3 more)
(+39 files in other folders)
