[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linear-llm-niah"
version = "0.1.0"
description = "Lightweight NIAH/passkey reproduction pipeline for linear-time language models."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
plot = [
  "matplotlib>=3.8",
]
mamba2 = [
  "torch==2.5.1",
  "transformers==4.46.3",
  "accelerate>=0.34,<2",
  "safetensors",
  "sentencepiece",
]
gated-deltanet = [
  "torch==2.5.1",
  "transformers==4.46.3",
  "accelerate>=0.34,<2",
  "safetensors",
  "sentencepiece",
  "protobuf",
  "flash-linear-attention==0.3.2",
  "fla-core==0.3.2",
  "huggingface_hub",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
